--- a/vars.less
+++ b/vars.less
@@ -1,3 +1,13 @@
+@fallback: false;
+
+@h3: 2.8rem;
+
+////////////////////////////////////////////////////////
+// APPEARANCE
+////////////////////////////////////////////////////////
+
+@bd: 2px;
+
 @import 'vars/glossary.less';
 @import 'vars/colors.less';
 @import 'vars/appearance.less';
