--- a/global.less
+++ b/global.less
@@ -1,2 +1,10 @@
 @import 'theme/layout.less';
 @import 'theme/media.less';
+
+////////////////////////////////////////////////////////
+// FONTS
+////////////////////////////////////////////////////////
+
+html {
+  .ff(@ff);
+}
