Removed mixins, vars, theme folders

--- a/global.less
+++ b/global.less
@@ -1,10 +1,33 @@
-@import 'theme/layout.less';
-@import 'theme/media.less';
+@import (reference) 'reference.less';
+@import 'reset.less';
 
 ////////////////////////////////////////////////////////
-// FONTS
+// TYPE
 ////////////////////////////////////////////////////////
+
+@lh: 1.25em;
+@ff: 'Arial',sans-serif;
+@c: #444;
 
 html {
   .ff(@ff);
+  .lh(@lh);
+  .c(@c);
+}
+
+////////////////////////////////////////////////////////
+// REM SIZES (rms)
+////////////////////////////////////////////////////////
+
+@media @desktop {html {.fs(10px);}}
+@media @laptop  {html {.fs(9px);}}
+@media @tablet  {html {.fs(8px);}}
+@media @phone  {html {.fs(8px);}}
+
+////////////////////////////////////////////////////////
+// MEDIA
+////////////////////////////////////////////////////////
+
+.mediaBackground {
+  .wh; .obf; .abs; .t; .l;
 }
