--- a/glossary.less
+++ b/glossary.less
@@ -121,17 +121,17 @@
 // SIZE (sz)
 /////////////////////////////////////////////////////////////////////
 
-.w     (@w:100%) {width: @w;}
+.w     (@w:100%)     {width: @w;}
 .mw    (@width:100%) {max-width: @width;}
-.mnw   (@mnw:100%) {min-width: @mnw;}
-.h     (@h:100%) {height: @h;}
-.mh    (@mh:100%) {max-height: @mh;}
-.mnh   (@mnh:100%) {min-height: @mnh;}
-.mwh   (@mwh:100%) {max-height: @mwh; max-width: @mwh;}
-.mnwh  (@mn:100%) {min-height: @mn; min-width: @mn;}
-.wh    (@wh:100%) {width: @wh; height: @wh;}
+.mnw   (@mnw:100%)   {min-width: @mnw;}
+.h     (@h:100%)     {height: @h;}
+.mh    (@mh:100%)    {max-height: @mh;}
+.mnh   (@mnh:100%)   {min-height: @mnh;}
+.mwh   (@mwh:100%)   {max-height: @mwh; max-width: @mwh;}
+.mnwh  (@mn:100%)    {min-height: @mn; min-width: @mn;}
+.wh    (@wh:100%)    {width: @wh; height: @wh;}
 
-.of    (@of:hidden) {overflow: @of;}
+.of    (@of:hidden)  {overflow: @of;}
 .ofx   (@ofx:hidden) {overflow-x: @ofx;}
 .ofy   (@ofy:hidden) {overflow-y: @ofy; -webkit-overflow-scrolling: touch;}
 
@@ -139,15 +139,15 @@
 // BORDER (bdr)
 /////////////////////////////////////////////////////////////////////
 
-.bd   (@bd:@bd solid @dgrey) {border:@bd;}
-.bdc  (@bdc) {border-color:@bdc;}
-.bdl  (@bd:@bd solid @mgrey) {border-left:@bd;}
-.bdr  (@bd:@bd solid @mgrey) {border-right:@bd;}
-.bdb  (@bd:@bd solid @mgrey) {border-bottom:@bd;}
-.bdbc (@c) {border-bottom-color: @c;}
-.bdt  (@bd:@bd solid @mgrey) {border-top:@bd;}
-.bdw  (@bd) {border-width:@bd;}
-.bdwb (@bw) {border-bottom-width: @bw;}
+.bd   (@bd)    {border:@bd;}
+.bdc  (@bdc)   {border-color:@bdc;}
+.bdl  (@bd)    {border-left:@bd;}
+.bdr  (@bd)    {border-right:@bd;}
+.bdb  (@bd)    {border-bottom:@bd;}
+.bdbc (@c)     {border-bottom-color: @c;}
+.bdt  (@bd)    {border-top:@bd;}
+.bdw  (@bd)    {border-width:@bd;}
+.bdwb (@bw)    {border-bottom-width: @bw;}
 .br   (@r:50%) {border-radius:@r;}
 
 .ot   (@ot:none) {outline: @ot;}
