--- a/vars.less
+++ b/vars.less
@@ -1,15 +1,63 @@
-@fallback: false;
-
-@h3: 2.8rem;
-
 ////////////////////////////////////////////////////////
 // APPEARANCE
 ////////////////////////////////////////////////////////
 
 @bd: 2px;
 
-@import 'vars/glossary.less';
-@import 'vars/colors.less';
-@import 'vars/appearance.less';
-@import 'vars/sizes.less';
-@import 'vars/responsive.less';
+/////////////////////////////////////////////////////////////////////
+// COLORS (clr)
+/////////////////////////////////////////////////////////////////////
+
+@prime:  blue; // Primary Coloy
+@accent: green; // Accent Color
+
+/////////////////////////////////////////////////////////////////////
+// FONTS (fnt)
+/////////////////////////////////////////////////////////////////////
+
+@c: #444;
+
+/////////////////////////////////////////////////////////////////////
+// SCREENS (scn)
+/////////////////////////////////////////////////////////////////////
+
+@phone-max: 480px;
+@tablet-min: 481px;
+@tablet-max: 767px;
+@laptop-min: 768px;
+@laptop-max: 1280px;
+@desktop-min: 1281px;
+
+
+@phone:  ~'screen and (max-width: @{phone-max})';
+@tablet:  ~'screen and (min-width: @{tablet-min}) and (max-width: @{tablet-max})';
+@laptop:  ~'screen and (min-width: @{laptop-min}) and (max-width: @{laptop-max})';
+@desktop: ~'screen and (min-width: @{desktop-min})';
+
+@min-laptop: ~'screen and (min-width:@{laptop-min})';
+@min-tablet: ~'screen and (min-width:@{tablet-min})';
+@max-tablet: ~'screen and (max-width:@{tablet-max})';
+@max-laptop: ~'screen and (max-width:@{laptop-max})';
+@min-desktop : ~'screen and (min-width:@{desktop-min})';
+
+////////////////////////////////////////////////////////
+// SIZES
+////////////////////////////////////////////////////////
+
+@xxs: 1rem;
+@xs: 1.5rem;
+@s: 2.5rem;
+@ms: 3rem;
+@m: 5rem;
+@ml: 7rem;
+@l: 9rem;
+@xl: 12rem;
+
+@blog: 700px;
+@main: 1400px;
+
+////////////////////////////////////////////////////////
+// FONTS (fnt)
+////////////////////////////////////////////////////////
+
+@fs: 2.4rem;
