--- a/reset.less
+++ b/reset.less
@@ -7,7 +7,19 @@ html {
   .pad(0); .mar(0); .mt(0px ~'!important');
 }
 
-h1,h2,h3,h4,h5,p,hr,img {.rel;}
+////////////////////////////////////////////////////////
+// TYPE
+////////////////////////////////////////////////////////
+
+h1,h2,h3,h4,h5,h6,p,.p2 {
+  .lh(@lh);
+}
+
+h1,h2,h3,h4,h5,p,hr,img {.rel; .mt(0);}
+
+p,.p2 {
+  .lh(@lh); .fw(inherit);
+}
 
 header, body, hr {.pad(0); .mar(0);}
 
@@ -38,6 +50,18 @@ ul {appearance:none;}
 a:active,
 a:hover {
   outline: 0;
+}
+
+////////////////////////////////////////////////////////
+// CONTAINERS
+////////////////////////////////////////////////////////
+
+div > :first-child {
+  .mt(0);
+}
+
+div > :last-child {
+  .mb(0);
 }
 
 /////////////////////////////////////////////////////////////////////
