--- a/global.less
+++ b/global.less
@@ -2,11 +2,81 @@
 @import 'reset.less';
 
 ////////////////////////////////////////////////////////
+// CARDS
+////////////////////////////////////////////////////////
+
+@cardHover: {
+  .trf(scale(1.05));
+};
+
+////////////////////////////////////////////////////////
+// CONTAINERS
+////////////////////////////////////////////////////////
+
+.wrap(
+  @width: @main
+) {
+  .w(calc(@width ~'+ (var(--h) * 2)')); .mw; .mlr(auto);
+  .pad(var(--v) var(--h));
+}
+
+.mainWrap {
+  .wrap(@width: @main);
+}
+
+.blogWrap,.smallWrap {
+  .wrap(@width: @blog);
+}
+
+.mediumWrap {
+  .wrap(@width: 100rem);
+}
+
+////////////////////////////////////////////////////////
+// HEADLINES
+////////////////////////////////////////////////////////
+
+@h3: 4rem;
+
+h3 {
+  .fs(@h3);
+}
+
+@h5: @p;
+
+h5 {
+  .fs(@h5);
+}
+
+////////////////////////////////////////////////////////
+// LINKS
+////////////////////////////////////////////////////////
+
+@textLink: {
+  .txd(underline);
+};
+
+.textLink {
+  @textLink();
+}
+
+////////////////////////////////////////////////////////
+// PARAGRAPHS
+////////////////////////////////////////////////////////
+
+@p2: 2.2rem;
+
+.p2 {
+  .fs(@p2);
+}
+
+////////////////////////////////////////////////////////
 // TYPE
 ////////////////////////////////////////////////////////
 
 @lh: 1.25em;
 @ff: 'Arial',sans-serif;
+@fw: 300;
 @c: #444;
 
 html {
@@ -18,6 +88,15 @@ html {
 ////////////////////////////////////////////////////////
 // REM SIZES (rms)
 ////////////////////////////////////////////////////////
+
+:root {
+  --v: 10rem;
+  --h: @m;
+}
+
+body {
+  .fs(@p); .fw(300);
+}
 
 @media @desktop {html {.fs(10px);}}
 @media @laptop  {html {.fs(9px);}}
@@ -31,3 +110,9 @@ html {
 .mediaBackground {
   .wh; .obf; .abs; .t; .l;
 }
+
+////////////////////////////////////////////////////////
+// SIZES
+////////////////////////////////////////////////////////
+
+@ratio: 1.618;
