--- a/glossary.less
+++ b/glossary.less
@@ -65,7 +65,7 @@
 .lh   (@line-height:100%) {line-height:@line-height;}
 .ls   (@ls:0) {letter-spacing:@ls;}
 .ttf  (@trans:uppercase) {text-transform:@trans;} @upr: uppercase;
-.ts   (@ts) {text-shadow: @ts;}
+.tsh   (@ts) {text-shadow: @ts;}
 .ws   (@ws) {word-spacing:@ws;}
 .txd  (@txd) {text-decoration:@txd;}
 .txdc (@txdc) {text-decoration-color: @txdc;}
@@ -109,9 +109,10 @@
 
 .pos  (@pos) {position: @pos;}
 
-.rel  () {position: relative;}
-.fxd  () {position: fixed;}
-.abs  () {position: absolute;}
+.rel    () {position: relative;}
+.fxd    () {position: fixed;}
+.fixed  () {position: fixed;}
+.abs    () {position: absolute;}
 
 .l    (@l:0) {left: @l;}
 .r    (@r:0) {right: @r;}
