Added longFormContent mixin
+ longFormContent mixin

> reset styles: html to body

--- a/global.less
+++ b/global.less
@@ -39,7 +39,7 @@
 @h1: 6.5rem;
 
 h1 {
-  .fs(@h1); .mar(1em 0 .5em);
+  .fs(@h1); .mb(.5em);
 
   @media @phone {
     .fs(@h2);
@@ -50,21 +50,21 @@ h1 {
 
 h2 {
   .fs(@h2); 
-  .mar(1em 0 .5em);
+  .mb(.5em);
 }
 
 @h3: 3rem;
 
 h3 {
   .fs(@h3);
-  .mar(1em 0 .5em);
+  .mb(.5em);
 }
 
 @h5: @p;
 
 h5 {
   .fs(@h5);
-  .mar(1em 0 .5em);
+  .mb(.5em);
 }
 
 ////////////////////////////////////////////////////////
@@ -87,21 +87,6 @@ h5 {
 
 .p2 {
   .fs(@p2);
-}
-
-////////////////////////////////////////////////////////
-// TYPE
-////////////////////////////////////////////////////////
-
-@lh: 1.25em;
-@ff: 'Arial',sans-serif;
-@fw: 300;
-@c: #444;
-
-html {
-  .ff(@ff);
-  .lh(@lh);
-  .c(@c);
 }
 
 ////////////////////////////////////////////////////////
@@ -131,6 +116,46 @@ body {
 }
 
 ////////////////////////////////////////////////////////
+// LONG-FORM CONTENT
+////////////////////////////////////////////////////////
+
+.longFormContent() {
+  img {
+    .w; .mw(@main); .mar(0 auto @l);
+  }
+
+  // Block Quotes
+
+  blockquote {
+    .ml(@lh / 2); .fs(@p * 1.25); .fst(italic); .o(.5);
+  }
+
+  // Lists
+
+  li {
+    .mb(@lh * .5);
+  }
+
+  ul {
+
+    li {
+      .ml(@lh);
+      .lst(disc);
+    }
+  }
+
+  ol {
+    li {
+      .ml(@lh / 2);
+    }
+  }
+
+  h2,h3,h4,h5,h6 {
+    .mt(@lh);
+  }
+};
+
+////////////////////////////////////////////////////////
 // MEDIA
 ////////////////////////////////////////////////////////
 
@@ -143,3 +168,32 @@ body {
 ////////////////////////////////////////////////////////
 
 @ratio: 1.618;
+
+
+////////////////////////////////////////////////////////
+// TYPE
+////////////////////////////////////////////////////////
+
+@lh: 1.25em;
+@ff: 'Arial',sans-serif;
+@fw: 300;
+@c: #444;
+@mb: 1.4em;
+
+@light: 300;
+@regular: 400;
+@medium: 500;
+@bold: 600;
+@heavy: 700;
+
+body {
+  .ff(@ff);
+  .lh(@lh);
+  .c(@c);
+}
+
+@pBold: @regular;
+
+strong,bold {
+  .fw(@pBold);
+}
