--- a/reset.less
+++ b/reset.less
@@ -1,10 +1,18 @@
 @import (reference) 'vars.less';
 
-html {
+body {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   font-size: 10px;
   .pad(0); .mar(0); .mt(0px ~'!important');
+}
+
+////////////////////////////////////////////////////////
+// LISTS
+////////////////////////////////////////////////////////
+
+li {
+  .lh(inherit);
 }
 
 ////////////////////////////////////////////////////////
@@ -50,18 +58,6 @@ ul {appearance:none;}
 a:active,
 a:hover {
   outline: 0;
-}
-
-////////////////////////////////////////////////////////
-// CONTAINERS
-////////////////////////////////////////////////////////
-
-div > :first-child {
-  .mt(0);
-}
-
-div > :last-child {
-  .mb(0);
 }
 
 /////////////////////////////////////////////////////////////////////
