Renamed longFormContent to richContent
* longFormContent to richContent

--- a/global.less
+++ b/global.less
@@ -119,7 +119,7 @@ body {
 // LONG-FORM CONTENT
 ////////////////////////////////////////////////////////
 
-.longFormContent() {
+.richContent() {
   img {
     .w; .mw(@main); .mar(0 auto @l);
   }
