--- a/glossary.less
+++ b/glossary.less
@@ -21,7 +21,7 @@
 /////////////////////////////////////////////////////////////////////
 
 .bg  (@bg)  { background: @bg; }
-.bc  (@c)   { background-color: @c; }
+.bc  (@color)   { background-color: @c; }
 .bgs (@bgs) { background-size: @bgs; }
 .bgp (@bp)  { background-position: @bp; }
 .bgi (@bgi) { background-image: url(@bgi); }
@@ -148,7 +148,7 @@
 .bdl  (@bd)    {border-left:@bd;}
 .bdr  (@bd)    {border-right:@bd;}
 .bdb  (@bd)    {border-bottom:@bd;}
-.bdbc (@c)     {border-bottom-color: @c;}
+.bdbc (@color)     {border-bottom-color: @c;}
 .bdt  (@bd)    {border-top:@bd;}
 .bdw  (@bd)    {border-width:@bd;}
 .bdwb (@bw)    {border-bottom-width: @bw;}
